# playhub-scraper

./: .gitignore  README.md  db.py  launch_upcoming.sh  main.py  postcodes.txt  pyproject.toml  results.csv  scrape.py  upcoming.sh
.github/workflows/: generate-db.yml
analysis/: README.md  bye_analysis.py  fold_deep_dive.py  fold_model_comparison.py  r1_rank_diff.py  sort_key_hypothesis.py
docs/: index.html  postcodes.json  upcoming.html  upcoming_DA13_9DJ.csv  upcoming_MK10_0BA.csv  upcoming_MK6.csv
sources/: source_20260414T140404.xlsx
