[project]
dependencies = [
  "click>=8.0",
  "matplotlib>=3.8",
  "pydantic>=2.0",
  "requests>=2.32.5",
  "sqlalchemy>=2.0",
  "tenacity>=9.0",
]
description = "Add your description here"
name = "playhub-scraper"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.scripts]
playhub = "main:cli"

[tool.uv]
package = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]
